# PlanG

./: CMakeLists.txt  README.md  build.sh
include/ggi/: demo-generator.hpp
include/ggi/gengAPI/: Makefile  README.md
include/ggi/gengAPI/include/geng/: GengAPI.hpp  GraphView.hpp  GraphViewBoost.hpp  GraphViewFunctions.hpp
include/ggi/gengAPI/src/: geng_demo.cpp
include/ggi/gengAPI/src/geng/: geng_api.cpp  geng_shim.c
include/ggi/plantriAPI/: Makefile
include/ggi/plantriAPI/include/plantri/: BridgeAPI.hpp
include/ggi/plantriAPI/src/: main.cpp
include/ggi/plantriAPI/src/bridge/: bridge_api.cpp  plugin_shim.c
src/: main.cpp
